vendor/wdsp/wdsp.h

typedef struct _resample *RESAMPLE;
WDSP_API void TXASetMP (int channel, int mp);
WDSP_API void TXASetNC (int channel, int nc);
/*  ---- ammod.c ----------------------------------------------------------- */

WDSP_API void SetTXAAMCarrierLevel (int channel, double c_level);
WDSP_API void SetTXAAMSQRun (int channel, int run);
/*  ---- calcc.c ----------------------------------------------------------- */

WDSP_API void GetPSDisp (int channel, double *x, double *ym, double *yc, double *ys, double *xm_cor, double *ym_cor,
                         double *xa_cor, double *ya_cor, int *nsamps_out, int *cpts_out, double *phs_ref_deg_out);
WDSP_API void GetPSHWPeak (int channel, double *peak);
WDSP_API void GetPSInfo (int channel, int *info);
WDSP_API void GetPSMaxTX (int channel, double *maxtx);
WDSP_API void PSRestoreCorr (int channel, char *filename);
WDSP_API void PSSaveCorr (int channel, char *filename);
WDSP_API void SetPSAutomode (int channel, int automode);
WDSP_API void SetPSControl (int channel, int reset, int mancal, int automode, int turnon);
WDSP_API void SetPSDeadlockMinFrac (int channel, double frac);
WDSP_API void SetPSFeedbackRate (int channel, int rate);
WDSP_API void SetPSHWPeak (int channel, double peak);
WDSP_API void SetPSLoopDelay (int channel, double delay);
WDSP_API void SetPSMancal (int channel, int mancal);
WDSP_API void SetPSMox (int channel, int mox);
WDSP_API void SetPSMoxDelay (int channel, double delay);
WDSP_API void SetPSReset (int channel, int reset);
WDSP_API void SetPSRunCal (int channel, int run);
WDSP_API double SetPSTXDelay (int channel, double delay);
WDSP_API void SetPSTurnon (int channel, int turnon);
WDSP_API void pscc (int channel, int size, double *tx, double *rx);
WDSP_API void SetTXACFIRRun (int channel, int run);
/*  ---- compress.c -------------------------------------------------------- */

WDSP_API void SetTXACompressorGain (int channel, double gain);
WDSP_API void SetTXACompressorRun (int channel, int run);
/*  ---- eer.c ------------------------------------------------------------- */

WDSP_API void SetEERAMIQ (int id, int amiq);
WDSP_API void SetEERMdelay (int id, double delay);
WDSP_API void SetEERMgain (int id, double gain);
WDSP_API void SetEERPdelay (int id, double delay);
WDSP_API void SetEERPgain (int id, double gain);
WDSP_API void SetEERRun (int id, int run);
WDSP_API void SetEERRunDelays (int id, int run);
WDSP_API void create_eerEXT (int id, int run, int size, int rate, double mgain, double pgain, int rundelays,
                             double mdelay, double pdelay, int amiq);
WDSP_API void xeerEXTF (int id, float *inI, float *inQ, float *outI, float *outQ, float *outMI, float *outMQ, int mox,
                        int size);
WDSP_API void SetTXAFMEmphPosition (int channel, int position);
WDSP_API void SetRXAGrphEQ10 (int channel, int *rxeq);
WDSP_API void SetTXAGrphEQ (int channel, int *txeq);
WDSP_API void SetTXAGrphEQ10 (int channel, int *txeq);
WDSP_API void SetTXACTCSSRun (int channel, int run);
WDSP_API void SetTXAFMDeviation (int channel, double deviation);
WDSP_API void SetTXAPostGenMode (int channel, int mode);
WDSP_API void SetTXAPostGenRun (int channel, int run);
WDSP_API void SetTXAPostGenSweepFreq (int channel, double freq1, double freq2);
WDSP_API void SetTXAPostGenSweepMag (int channel, double mag);
WDSP_API void SetTXAPostGenSweepRate (int channel, double rate);
WDSP_API void SetTXAPostGenTTFreq (int channel, double freq1, double freq2);
WDSP_API void SetTXAPostGenTTMag (int channel, double mag1, double mag2);
WDSP_API void SetTXAPostGenToneFreq (int channel, double freq);
WDSP_API void SetTXAPostGenToneMag (int channel, double mag);
WDSP_API void SetTXAPreGenMode (int channel, int mode);
WDSP_API void SetTXAPreGenNoiseMag (int channel, double mag);
WDSP_API void SetTXAPreGenPulseDutyCycle (int channel, double dc);
WDSP_API void SetTXAPreGenPulseFreq (int channel, double freq);
WDSP_API void SetTXAPreGenPulseMag (int channel, double mag);
WDSP_API void SetTXAPreGenPulseToneFreq (int channel, double freq);
WDSP_API void SetTXAPreGenPulseTransition (int channel, double transtime);
WDSP_API void SetTXAPreGenRun (int channel, int run);
WDSP_API void SetTXAPreGenSawtoothFreq (int channel, double freq);
WDSP_API void SetTXAPreGenSawtoothMag (int channel, double mag);
WDSP_API void SetTXAPreGenSweepFreq (int channel, double freq1, double freq2);
WDSP_API void SetTXAPreGenSweepMag (int channel, double mag);
WDSP_API void SetTXAPreGenSweepRate (int channel, double rate);
WDSP_API void SetTXAPreGenToneFreq (int channel, double freq);
WDSP_API void SetTXAPreGenToneMag (int channel, double mag);
WDSP_API void SetTXAPreGenTriangleFreq (int channel, double freq);
WDSP_API void SetTXAPreGenTriangleMag (int channel, double mag);
WDSP_API double GetTXAMeter(int channel, int mt);
/*  ---- osctrl.c ---------------------------------------------------------- */

WDSP_API void SetTXAosctrlRun(int channel, int run);
/*  ---- resample.c -------------------------------------------------------- */

WDSP_API RESAMPLE create_resample(int run, int size, double *in, double *out, int in_rate, int out_rate, double fc,
                                  int ncoef, double gain);
WDSP_API void destroy_resample(RESAMPLE a);
WDSP_API void flush_resample(RESAMPLE a);
WDSP_API int xresample(RESAMPLE a);
WDSP_API void SetTXAALCAttack(int channel, int attack);
WDSP_API void SetTXAALCDecay(int channel, int decay);
WDSP_API void SetTXAALCHang(int channel, int hang);
WDSP_API void SetTXAALCMaxGain(int channel, double maxgain);
WDSP_API void SetTXAALCSt(int channel, int state);
WDSP_API void SetTXALevelerAttack(int channel, int attack);
WDSP_API void SetTXALevelerDecay(int channel, int decay);
WDSP_API void SetTXALevelerHang(int channel, int hang);
WDSP_API void SetTXALevelerSt(int channel, int state);
WDSP_API void SetTXALevelerTop(int channel, double maxgain);