src/wdsp_sys/mod.rs

unsafe extern "C" {
    pub fn SetTXACTCSSRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAAMSQRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXACompressorGain(channel: ::std::os::raw::c_int, gain: f64);
}
unsafe extern "C" {
    pub fn SetTXACompressorRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAosctrlRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXACFIRRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn GetTXAMeter(channel: ::std::os::raw::c_int, mt: ::std::os::raw::c_int) -> f64;
}
unsafe extern "C" {
    pub fn SetTXAALCSt(channel: ::std::os::raw::c_int, state: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAALCAttack(channel: ::std::os::raw::c_int, attack: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAALCDecay(channel: ::std::os::raw::c_int, decay: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAALCHang(channel: ::std::os::raw::c_int, hang: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAALCMaxGain(channel: ::std::os::raw::c_int, maxgain: f64);
}
unsafe extern "C" {
    pub fn SetTXALevelerSt(channel: ::std::os::raw::c_int, state: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXALevelerAttack(channel: ::std::os::raw::c_int, attack: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXALevelerDecay(channel: ::std::os::raw::c_int, decay: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXALevelerHang(channel: ::std::os::raw::c_int, hang: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXALevelerTop(channel: ::std::os::raw::c_int, maxgain: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPreGenMode(channel: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPreGenToneMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenToneFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenNoiseMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenSweepMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenSweepFreq(channel: ::std::os::raw::c_int, freq1: f64, freq2: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenSweepRate(channel: ::std::os::raw::c_int, rate: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenSawtoothMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenSawtoothFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenTriangleMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenTriangleFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenPulseMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenPulseFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenPulseDutyCycle(channel: ::std::os::raw::c_int, dc: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenPulseToneFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPreGenPulseTransition(channel: ::std::os::raw::c_int, transtime: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPostGenMode(channel: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAPostGenToneMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenToneFreq(channel: ::std::os::raw::c_int, freq: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenTTMag(channel: ::std::os::raw::c_int, mag1: f64, mag2: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenTTFreq(channel: ::std::os::raw::c_int, freq1: f64, freq2: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenSweepMag(channel: ::std::os::raw::c_int, mag: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenSweepFreq(channel: ::std::os::raw::c_int, freq1: f64, freq2: f64);
}
unsafe extern "C" {
    pub fn SetTXAPostGenSweepRate(channel: ::std::os::raw::c_int, rate: f64);
}
unsafe extern "C" {
    pub fn SetTXAGrphEQ(channel: ::std::os::raw::c_int, txeq: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    // See SetRXAGrphEQ10's doc comment -- same reasoning, TXA side.
    pub fn SetTXAGrphEQ10(channel: ::std::os::raw::c_int, txeq: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAFMDeviation(channel: ::std::os::raw::c_int, deviation: f64);
}
unsafe extern "C" {
    pub fn SetTXAFMEmphPosition(channel: ::std::os::raw::c_int, position: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn TXASetNC(channel: ::std::os::raw::c_int, nc: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn TXASetMP(channel: ::std::os::raw::c_int, nc: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAAMCarrierLevel(channel: ::std::os::raw::c_int, c_level: f64);
}
unsafe extern "C" {
    pub fn SetPSRunCal(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSMox(channel: ::std::os::raw::c_int, mox: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSReset(channel: ::std::os::raw::c_int, reset: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSMancal(channel: ::std::os::raw::c_int, mancal: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSAutomode(channel: ::std::os::raw::c_int, automode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSTurnon(channel: ::std::os::raw::c_int, turnon: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetPSControl(
        channel: ::std::os::raw::c_int,
        reset: ::std::os::raw::c_int,
        mancal: ::std::os::raw::c_int,
        automode: ::std::os::raw::c_int,
        turnon: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetPSLoopDelay(channel: ::std::os::raw::c_int, delay: f64);
}
unsafe extern "C" {
    pub fn SetPSMoxDelay(channel: ::std::os::raw::c_int, delay: f64);
}
unsafe extern "C" {
    pub fn SetPSTXDelay(channel: ::std::os::raw::c_int, delay: f64) -> f64;
}
unsafe extern "C" {
    pub fn SetPSHWPeak(channel: ::std::os::raw::c_int, peak: f64);
}
unsafe extern "C" {
    /// Diagnostic-only, unused by this project. Its old doc comment
    /// described a fixed-size (ints*spi=4096, ints*4=64) scatter/
    /// coefficient buffer layout matching the pre-WDSP-2.10 bucketed-
    /// histogram calcc engine -- as of the WDSP 2.10 port
    /// (2026-09-07), that engine was replaced with a NURBS spline fit
    /// (see calcc.c) with a different internal data model, and
    /// `ints`/`spi` no longer exist as concepts at all
    /// (`SetPSIntsAndSpi` is gone upstream, removed below). GetPSDisp
    /// itself is still exported with the same signature, but its
    /// buffer-sizing contract is unverified against the new
    /// implementation -- re-check calcc.c directly before ever wiring
    /// this up.
    pub fn GetPSDisp(
        channel: ::std::os::raw::c_int,
        x: *mut f64,
        ym: *mut f64,
        yc: *mut f64,
        ys: *mut f64,
        cm: *mut f64,
        cc: *mut f64,
        cs: *mut f64,
    );
}
unsafe extern "C" {
    pub fn SetPSFeedbackRate(channel: ::std::os::raw::c_int, rate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    /// New in the WDSP 2.10 revision synced from deskHPSDR (2026-09-08,
    /// see memory/wdsp_210_port.md) -- not present in this project's
    /// first, earlier WDSP 2.10 snapshot at all. Sets the minimum
    /// fraction of "useful" (not noise-dominated) samples calcc.c's
    /// deadlock/over-drive check requires in the highest-drive
    /// calibration bucket before giving up and resetting (clamped
    /// 0.0-1.0 by WDSP itself). WDSP's own compiled-in default is 0.06
    /// ("Strict" in deskHPSDR's own UI); deskHPSDR's own app-level
    /// default relaxes this to 0.02 for real (imperfect/noisy)
    /// feedback hardware -- confirmed via its ps_menu.c/transmitter.c
    /// source directly, not guessed.
    pub fn SetPSDeadlockMinFrac(channel: ::std::os::raw::c_int, frac: f64);
}
unsafe extern "C" {
    pub fn GetPSInfo(channel: ::std::os::raw::c_int, info: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn GetPSHWPeak(channel: ::std::os::raw::c_int, peak: *mut f64);
}
unsafe extern "C" {
    pub fn GetPSMaxTX(channel: ::std::os::raw::c_int, maxtx: *mut f64);
}
unsafe extern "C" {
    /// Queues an async save of the current correction table to
    /// `filename` (confirmed via calcc.c: this just signals a
    /// background WDSP-internal thread via a semaphore and returns
    /// immediately, not a blocking file write on the calling thread).
    pub fn PSSaveCorr(channel: ::std::os::raw::c_int, filename: *mut ::std::os::raw::c_char);
}
unsafe extern "C" {
    /// Queues an async load of a previously-saved correction table from
    /// `filename` and applies it -- confirmed via calcc.c: this also
    /// sets WDSP's internal `turnon` flag, which puts the engine into a
    /// one-shot "apply this table, don't (re)calibrate" mode (distinct
    /// from continuous auto-calibrate) and clears `automode` once
    /// applied, so continuous auto-calibrate needs re-enabling
    /// separately afterward if wanted.
    pub fn PSRestoreCorr(channel: ::std::os::raw::c_int, filename: *mut ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn pscc(
        channel: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
        tx: *mut f64,
        rx: *mut f64,
    );
}
unsafe extern "C" {
    pub fn create_eerEXT(
        id: ::std::os::raw::c_int,
        run: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
        rate: ::std::os::raw::c_int,
        mgain: f64,
        pgain: f64,
        rundelays: ::std::os::raw::c_int,
        mdelay: f64,
        pdelay: f64,
        amiq: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn xeerEXTF(
        id: ::std::os::raw::c_int,
        inI: *mut f32,
        inQ: *mut f32,
        outI: *mut f32,
        outQ: *mut f32,
        outMI: *mut f32,
        outMQ: *mut f32,
        mox: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetEERRun(id: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEERAMIQ(id: ::std::os::raw::c_int, amiq: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEERRunDelays(id: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEERPgain(id: ::std::os::raw::c_int, gain: f64);
}
unsafe extern "C" {
    pub fn SetEERPdelay(id: ::std::os::raw::c_int, delay: f64);
}
unsafe extern "C" {
    pub fn SetEERMgain(id: ::std::os::raw::c_int, gain: f64);
}
unsafe extern "C" {
    pub fn SetEERMdelay(id: ::std::os::raw::c_int, delay: f64);
}
unsafe extern "C" {
    pub fn create_resample(
        run: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
        in_: *mut f64,
        out: *mut f64,
        in_rate: ::std::os::raw::c_int,
        out_rate: ::std::os::raw::c_int,
        fc: f64,
        ncoef: ::std::os::raw::c_int,
        gain: f64,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn destroy_resample(a: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn flush_resample(a: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn xresample(a: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
